# streamlit-authn

./: .gitignore  README.md  authnyc  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: issues.md
src/app/: app.py  auth_utils.py  common_utils.py  creds_authenticator.yaml
src/authnyc/: .apienv  .env  auth_utils.py  authnyc.py  authnyc.toml  authnyc_form.py  authnyc_user.py  common_utils.py  creds_authenticator.yaml  date_utils.py  edit_profile_form.py  image_utils.py  myprofile_form.py  navigation.py  oidc-required-settings.txt  oidc_form.py  oidc_utils.py  profile_edit.py  user_utils.py
src/authnyc/.streamlit/: config.toml
src/authnyc/pages/: my_profile.py  myprofile.py
tests/: test_common_utils.py
